--- a/css/theme.css
+++ b/css/theme.css
@@ -21,7 +21,7 @@
         --bg-secondary: #f5e0dc;
         --primary-colour: #4c4f69;
         --secondary-colour: #dce0e8;
-        --highlight-colour: #d20f39;
+        --highlight-colour: #302d41;
         --highlight-bg-colour: #f28fad;
         --btn-txt-colour: #4c4f69;
         --photo-bg-colour: #f5e0dc;
